name:                pkcloud-blog
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/name/project
-- license:             BSD3
license-file:        LICENSE
author:              James Parker
maintainer:          jp@pkauth.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     PKCloud.Blog
  other-modules:       
                       Import
                       PKCloud.Blog.Core
                       PKCloud.Blog.Routes
                       PKCloud.Blog.Handler.Author
                       PKCloud.Blog.Handler.Edit
                       PKCloud.Blog.Handler.Edits
                       PKCloud.Blog.Handler.New
                       PKCloud.Blog.Handler.Post
                       PKCloud.Blog.Handler.Posts
                       PKCloud.Blog.Handler.Root
  build-depends:       base >= 4.7 && < 5
                     , blaze-markup
                     , esqueleto
                     , markdown
                     , persistent
                     , pkcloud-core
                     , shakespeare
                     , text
                     , time
  default-language:    Haskell2010
  default-extensions:  RankNTypes, FlexibleContexts, TemplateHaskell, QuasiQuotes, TypeFamilies, OverloadedStrings, FlexibleInstances, MultiParamTypeClasses, ScopedTypeVariables, FunctionalDependencies, ViewPatterns, ImpredicativeTypes
  ghc-options:         -Werror -Wall -fno-warn-orphans -fno-warn-type-defaults -fno-warn-name-shadowing

-- executable new-template-exe
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , new-template
--   default-language:    Haskell2010

test-suite pkcloud-blog-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pkcloud-blog
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/name/project
